--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,5 +26,10 @@ jobs:
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del login"
-#     - name: Build the Docker image
-#       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        
+    - name: Build the Docker image
+      run: docker build -t jalbertomd/graphql:0.0.2 .
+      
+    - name: Push Docker image
+      run: 
+        docker push jalbertomd/graphql:0.0.2
