--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,18 +18,30 @@ jobs:
       with:
         fetch-depth: 0
         
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+        
     - name: Docker login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del login"
+        echo "New version: $NEW_VERSION!!!"
         
-    - name: Build the Docker image
-      run: docker build -t jalbertomd/docker-graphql:0.0.2 .
+#     - name: Build the Docker image
+#       run: docker build -t jalbertomd/docker-graphql:0.0.2 .
+#       run: docker build -t jalbertomd/docker-graphql:latest .
       
-    - name: Push Docker image
-      run: 
-        docker push jalbertomd/docker-graphql:0.0.2
+#     - name: Push Docker image
+#       run: 
+#         docker push jalbertomd/docker-graphql:0.0.2
+#         docker push jalbertomd/docker-graphql:latest
