--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,11 +37,16 @@ jobs:
         echo "Fin del login"
         echo "New version: $NEW_VERSION!!!"
         
-#     - name: Build the Docker image
-#       run: docker build -t jalbertomd/docker-graphql:0.0.2 .
-#       run: docker build -t jalbertomd/docker-graphql:latest .
+    - name: Build the Docker image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t jalbertomd/docker-graphql:$NEW_VERSION .
+        docker build -t jalbertomd/docker-graphql:latest .
       
-#     - name: Push Docker image
-#       run: 
-#         docker push jalbertomd/docker-graphql:0.0.2
-#         docker push jalbertomd/docker-graphql:latest
+    - name: Push Docker image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push jalbertomd/docker-graphql:$NEW_VERSION
+        docker push jalbertomd/docker-graphql:latest
